--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "stock",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon main.js",
+    "client": "npm start --prefix client"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,26 @@
   },
   "homepage": "https://github.com/nadralia/Full-Stack#readme",
   "dependencies": {
+    "async": "^3.2.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.26.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "mongoose": "^5.13.6",
+    "mongoose-paginate": "^5.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.6.3",
+    "react-moment": "^1.1.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.1",
+    "nodemon": "^2.0.12"
   }
 }
