--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "http-errors": "^1.8.0",
+    "jest": "^27.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -40,7 +43,8 @@
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.6.3",
-    "react-moment": "^1.1.1"
+    "react-moment": "^1.1.1",
+    "supertest": "^6.1.5"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
